# MultiRate

./: .cproject  .gitignore  .project  CMakeLists.txt  data.pot
src/: Doxyfile  IBCFunction.h  IFluxFunction.h  IInterpolationSolver.h  IMasterSolver.h  INewtonFunction.h  INewtonSolver.h  IRHSFunction.h  ISolverData.h  Restab.h  StandardTypes.h  TraceMng.h  chrono.hpp  main_solver.cpp
src/AllenCahnRHSFunction/: AllenCahnRHSFunction.cpp  AllenCahnRHSFunction.h
src/BESolver/: BESolver.cpp  BESolver.h  BESolverInput.cpp  BESolverInput.h  BESolverOutput.cpp  BESolverOutput.h  BESolverUtils.cpp  BESolverUtils.h
src/BESolverNewtonFunction/: BESolverNewtonFunction.cpp  BESolverNewtonFunction.h
src/ChemicalProblemsUtils/: ChemicalProblemsUtils.cpp  ChemicalProblemsUtils.h
src/ChemicalSystemTools/: ChemicalPhase.cpp  ChemicalPhase.h  ChemicalReaction.cpp  ChemicalReaction.h  ChemicalSourceRate.cpp  ChemicalSourceRate.h  ChemicalSpecies.cpp  ChemicalSpecies.h  ChemicalSystem.cpp  ChemicalSystem.h  ChemicalSystemState.cpp  ChemicalSystemState.h
src/ConstantBCFunction/: ConstantBCFunction.cpp  ConstantBCFunction.h
src/CubicHermiteInterpolationSolver/: CubicHermiteInterpolationSolver.cpp  CubicHermiteInterpolationSolver.h
src/FESolver/: FESolver.cpp  FESolver.h  FESolverInput.cpp  FESolverInput.h  FESolverOutput.cpp  FESolverOutput.h  FESolverUtils.cpp  FESolverUtils.h
src/GeochemistryRHSFunction/: GeochemistryParameters.cpp  GeochemistryParameters.h  GeochemistryRHSFunction.cpp  GeochemistryRHSFunction.h  GeochemistryRHSUtils.cpp  GeochemistryRHSUtils.h
src/HyperbolicEquationRusanovFlux/: BurgersFluxFunction.cpp  BurgersFluxFunction.h  HyperbolicEquationRusanovFlux.cpp  HyperbolicEquationRusanovFlux.h  TwoPhaseFlowFluxFunction.cpp  TwoPhaseFlowFluxFunction.h
src/HyperbolicEquationUpwindRHSFunction/: HyperbolicEquationUpwindRHSFunction.cpp  HyperbolicEquationUpwindRHSFunction.h  LinearFluxFunction.cpp  LinearFluxFunction.h
src/InterpolationSolver/: InterpolationInputSolver.cpp  InterpolationInputSolver.h  InterpolationOutputSolver.cpp  InterpolationOutputSolver.h
src/LinearInterpolationSolver/: LinearInterpolationSolver.cpp  LinearInterpolationSolver.h
src/MasterSolverOutputManipulator/: CourantNumber.cpp  CourantNumber.h  IsConservativeMethod.cpp  IsConservativeMethod.h  MasterSolution.cpp  MasterSolution.h  MasterSolverOutputManipulator.cpp  MasterSolverOutputManipulator.h
src/MultiRateTRBDF2Solver/: MultiRateTRBDF2Solver.cpp  MultiRateTRBDF2Solver.h  MultiRateTRBDF2SolverData.cpp  MultiRateTRBDF2SolverData.h
src/NewtonSolver/: BasicNewtonSolver.cpp  BasicNewtonSolver.h  FixedJacobianNewtonSolver.cpp  FixedJacobianNewtonSolver.h
src/Restab/: GenerateDebugRestabFile.cpp  (+13 more)
(+582 files in other folders)
